removed z-index and and position relative to site header to fix mobile menu hidden behind content

--- a/sass/navigation/_navigation.scss
+++ b/sass/navigation/_navigation.scss
@@ -1,6 +1,5 @@
 .main-navigation {
 	font-family: $font__navigation;
-	z-index: 50;
 
 	ul {
 		position: absolute;
