--- a/sass/site/primary/_site-header.scss
+++ b/sass/site/primary/_site-header.scss
@@ -1,4 +1,5 @@
 .site-header {
+	position: relative;
 	padding: {
 		top: 20px;
 		bottom: 20px;
