--- a/style.css
+++ b/style.css
@@ -471,8 +471,7 @@ table {
 # Navigation
 --------------------------------------------------------------*/
 .main-navigation {
-  font-family: "nimbus-sans-extended", sans-serif;
-  z-index: 50; }
+  font-family: "nimbus-sans-extended", sans-serif; }
   .main-navigation ul {
     position: absolute;
     top: 115px;
@@ -925,6 +924,7 @@ table {
 ## Site Header
 --------------------------------------------------------------*/
 .site-header {
+  position: relative;
   padding-top: 20px;
   padding-bottom: 20px;
   z-index: 100; }
